--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/jackyliudev/Meal-Planner#readme",
   "dependencies": {
+    "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
     "mongoose": "^6.5.2",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0"
